package v62;
import "sys/Common.proto";
import "v62/FPTData.proto";

option java_package = "nirvana.hall.protocol.v62";
option java_outer_classname = "AddCaseProto";

//添加案件
message AddCaseRequest{
    extend sys.BaseRequest{
        optional AddCaseRequest cmd = 9003;
    }
    required Case case = 1;
}

message AddCaseResponse{
    extend sys.BaseResponse{
        optional AddCaseResponse cmd = 9003;
    }
}